# datadog-query-cli

./: .env.example  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app_error.rs  cli.rs  config.rs  datadog.rs  main.rs  time_expr.rs
