[package]
name = "datadog-query-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
